--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,7 +173,7 @@ if (MPI_AVAILABLE)
     include_directories(${MPI_DIR}/include)
     link_directories(${MPI_LIB_DIR})
     add_executable(gvsRenderPar${BITS}${DAR} geovispar.cpp ${mpi_source_files})
-    target_link_libraries(gvsRenderPar${BITS}${DAR} gvs${BITS}${DAR}  gsl gslcblas dl mpi_cxx mpi)
+    target_link_libraries(gvsRenderPar${BITS}${DAR} gvs${BITS}${DAR}  gsl gslcblas dl mpi)
     if (TIFF_AVAILABLE)
         target_link_libraries(gvsRenderPar${BITS}${DAR} tiff)
     endif()
